<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coto.cesar.ejemplos.DatabaseActivity"
    tools:showIn="@layout/activity_database">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:id="@+id/tv_Acdatabase_ingresa_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_title_Acdatabase_code" />


            <EditText
                android:id="@+id/et_Adatabase_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/code_Acdatabse_01"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_Acdatabase_name_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_title_Acdatabase_name_produc" />

            <EditText
                android:id="@+id/et_Adatabase_name_pruducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/et_title_Acdatabase_example"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_Acdatabase_descrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_title_Acdatabe_description" />

            <EditText
                android:id="@+id/et_Adatabase_descrition_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/et_tilte_Acdatabase_description"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/agregar"
                android:text="@string/btn_title_agregar"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/borrar"
                android:text="@string/bnt_title_eliminar"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/editar"
                android:text="@string/btn_title_editar"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buscar_por_nombre"
                android:text="@string/btn_title_buscar_por_nombre"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buscar_por_codigo"
                android:text="@string/btn_title_buscar_por_codigo"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
