<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.coto.cesar.ejemplos.RadioButtonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tv_instruction_Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/intruction_Cb_tv"
                android:textAlignment="center"
                android:textColor="@color/texto_estilo1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_Arb_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:hint="@string/et_instruction_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_Arb_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/et_instruction_age"
                android:inputType="number" />

            <RadioGroup
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_male"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_female"
                    android:textSize="16sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_done_Arb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cardview_light_background"
                android:text="@string/btn_done"
                tools:targetApi="lollipop" />


        </LinearLayout>


    </ScrollView>
</RelativeLayout>
