<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:contentDescription="@string/hello"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/box_log"
        android:layout_weight="1.15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/title_nav_examples_android"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mandar_mail"
        android:text="@string/correo_developer_cesar_cotobvb_gmail_com" />

</LinearLayout>
